apps/domotic/zigbee2mqtt/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: zigbee2mqtt
  namespace: domotic
spec:
  selector:
    app: zigbee2mqtt
  ports:
    - name: frontend
      port: 8080
      targetPort: 8080
  type: ClusterIP
